🐛 fix: try fix flicker

--- a/src/index.css
+++ b/src/index.css
@@ -26,7 +26,20 @@
         --color-border: rgba(74, 85, 104, 0.2);
     }
 
-    [data-theme='dark'] {
+    html[data-theme="light"] {
+        --color-primary: rgb(0, 122, 255);
+
+        --color-text-primary: rgb(29, 35, 41);
+        --color-text-secondary: rgb(74, 85, 104);
+
+        --color-surface: rgb(248, 250, 252);
+        --color-surface-elevated: rgb(255, 255, 255);
+        --color-surface-hover: rgba(59, 130, 246, 0.08);
+
+        --color-border: rgba(74, 85, 104, 0.2);
+    }
+
+    html[data-theme="dark"] {
         --color-primary: rgb(10, 132, 255);
 
         --color-text-primary: rgb(247, 249, 252);
@@ -37,6 +50,21 @@
         --color-surface-hover: rgba(59, 130, 246, 0.12);
 
         --color-border: rgba(203, 213, 224, 0.2);
+    }
+
+    @media (prefers-color-scheme: dark) {
+        html:not([data-theme]) {
+            --color-primary: rgb(10, 132, 255);
+
+            --color-text-primary: rgb(247, 249, 252);
+            --color-text-secondary: rgb(203, 213, 224);
+
+            --color-surface: rgb(32, 33, 36);
+            --color-surface-elevated: rgb(41, 42, 45);
+            --color-surface-hover: rgba(59, 130, 246, 0.12);
+
+            --color-border: rgba(203, 213, 224, 0.2);
+        }
     }
 
     body {
